# doanchuyennganh

./: .aider.chat.history.md  .aider.input.history  .gitignore  AGENTS.md  ARCHITECTURE.md  BAO_CAO_23052026.md  BAO_CAO_CAP_NHAT_20260522.md  BAO_CAO_CAP_NHAT_DU_AN.md  BENCHMARK_MARL_COMPARISON.md  CLAUDE.md  COMPARISON.md  DIAGRAMS_ONLY.md  FLOW.md  OVERVIEW.md  PROMPT.md  README.md  ROADMAP.md  analyze_benchmark.py  fig1_pipeline.drawio  fig2_bug_subgraph.drawio  fig3_agents.drawio  fig4_verification.drawio  final_report_draft.md  final_report_structure.md  main.py  main_trollllm.py  mcp_client.py  pyproject.toml  question.md  requirements.txt  run_benchmark.py  section3_methodology.tex  switch_env.py
.aider.tags.cache.v4/: cache.db
agents/: blue_team.py  crawl_agent.py  exec_agent.py  manage_agent.py  policy_agent.py  red_team.py  vuln_hunter_agent.py
backup/: BAO_CAO_23052026.md  BAO_CAO_VISUAL.md  CHANGED.md  CHANGED2.md  CHANGELOG_SESSION.md  CRAWL_RECON_UPGRADE_REPORT.md  description.md  mangeragent-create.md
benchmark_results/: benchmark_master.json
benchmarks/: docker-compose.yml
config/: default.yaml
crawl/: .gitignore  benchmark_crawlers.py  benchmark_graph.py
docs/: LLM_CONTEXT_PROBE_GUIDE.md
knowledge/: __init__.py  bac_blf_playbook.py  bac_knowledge.json  blf_knowledge.json  recon_discovery_strategy.md
server/: server.py  server_trollllm.py
shared/: auth_context.py  bug_dossier.py  business_flow_mapper.py  context_manager.py  logger.py  memory_store.py  utils.py
template_dacn/: Readme.md  latexmkrc
test/: agent.py  crawler.py  flow  (+7 more)
(+157 files in other folders)
