[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marl3"
version = "1.0.0"
description = "LangGraph-powered multi-agent BAC/BLF web pentest tool"
requires-python = ">=3.11"
dependencies = [
    # LLM + orchestration
    "langgraph>=1.2",
    "langchain-core>=0.3",
    "openai>=1.30",
    # Config + data
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    # HTTP + browser
    "httpx>=0.27",
    "playwright>=1.44",
    # Utilities
    "rich>=13.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "aiofiles>=23.2",
    "tenacity>=8.3",
    "beautifulsoup4>=4.15.0",
]

[project.optional-dependencies]
proxy = ["fastapi>=0.111", "uvicorn[standard]>=0.30"]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "pytest-httpx>=0.30", "ruff>=0.4"]

[project.scripts]
marl3 = "marl3.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/marl3"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
